todo: change TPC

--- a/CogMI2025/pcs/index.html
+++ b/CogMI2025/pcs/index.html
@@ -50,33 +50,12 @@ title: "blank"
                     <div class="col-md-9"><!-- outter container  -->
                         <div class="news-v3-in">
                             <div class="row">
-                                <!-- <div class="col-md-3">
-                                    <ul class="no-padding margin-left-10 organizers-type-list hidden-xs"
-                                        id="sidebar-nav">
-                                        
-
-                                        <li class=""><a href="#CogMIGovernment/IndustryTrack">CogMI Government/Industry
-                                                Track</a></li>
-                                        <li class=""><a href="#CogMIVision">CogMI-Vision</a></li>
-                                        <li class=""><a href="#IEEECogMI2024Round1">IEEE CogMI 2024 Round 1</a></li>
-                                        <li class=""><a href="#IEEECogMI2024Round2">IEEE CogMI 2024 Round 2</a></li>
-
-
-                                    </ul>
-                                </div> -->
                                 <div class="col-md-12">
                                     <div id="organizers">
 
                                         
                                         <h4 id="CogMIGovernment/IndustryTrack">CogMI Government/Industry Track</h4>
-                                        <h5>PC Member</h5>
-                                        <ul>
-                                            <li><i>Jiajie He, University of Maryland, Baltimore County</i></li>
-                                            <li><i>Shreya Khurana, Godaddy</i></li>
-                                            <li><i>Sagar Sharma, TikTok</i></li>
-                                            <li><i>Yuechun Gu, Marquette University</i></li>
-                                        </ul>
-                                        <h5>Track Chair</h5>
+                                        <h5>Program Chairs</h5>
                                         <ul>
                                             <li><i>James Joshi, NSF</i></li>
                                             <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
@@ -84,9 +63,16 @@ title: "blank"
                                             <li><i>Cécile Paris, CSIRO</i></li>
                                             <li><i>Danda B. Rawat, Howard University</i></li>
                                         </ul>
+                                        <h5>PC Members</h5>
+                                        <ul>
+                                            <li><i>Jiajie He, University of Maryland, Baltimore County</i></li>
+                                            <li><i>Shreya Khurana, Godaddy</i></li>
+                                            <li><i>Sagar Sharma, TikTok</i></li>
+                                            <li><i>Yuechun Gu, Marquette University</i></li>
+                                        </ul>
 
                                         <h4 id="CogMIVision">CogMI-Vision</h4>
-                                        <h5>Track Chair</h5>
+                                        <h5>Program Chairs</h5>
                                         <ul>
                                             <li><i>Wenqi Wei, Fordham University</i></li>
                                             <li><i>Calton Pu, Georgia Institute of Technology</i></li>
@@ -96,7 +82,7 @@ title: "blank"
                                         </ul>
 
                                         <h4 id="IEEECogMI2024Round1">IEEE CogMI 2024 Round 1</h4>
-                                        <h5>Track Chair</h5>
+                                        <h5>Program Chairs</h5>
                                         <ul>
                                             <li><i>Kc Santosh, University of South Dakota</i></li>
                                             <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
@@ -104,7 +90,7 @@ title: "blank"
                                             <li><i>Peilin He, University of Pittsburgh</i></li>
                                             <li><i>Cécile Paris, CSIRO</i></li>
                                         </ul>
-                                        <h5>PC Member</h5>
+                                        <h5>PC Members</h5>
                                         <ul>
                                             <li><i>Ravindra Hegadi, Central University of Karnataka</i></li>
                                             <li><i>Sagar Sharma, TikTok</i></li>
@@ -144,7 +130,15 @@ title: "blank"
                                         </ul>
 
                                         <h4 id="IEEECogMI2024Round2">IEEE CogMI 2024 Round 2</h4>
-                                        <h5>PC Member</h5>
+                                        <h5>Program Chairs</h5>
+                                        <ul>
+                                            <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
+                                            <li><i>Kc Santosh, University of South Dakota</i></li>
+                                            <li><i>James Joshi, NSF</i></li>
+                                            <li><i>Danda B. Rawat, Howard University</i></li>
+                                            <li><i>Cécile Paris, CSIRO</i></li>
+                                        </ul>
+                                        <h5>PC Members</h5>
                                         <ul>
                                             <li><i>Jörg Schlötterer, University of Marburg, University of Mannheim</i>
                                             </li>
@@ -184,17 +178,6 @@ title: "blank"
                                             <li><i>Aaisha Makkar</i></li>
                                             <li><i>Anas El-Kalam</i></li>
                                         </ul>
-                                        <h5>Track Chair</h5>
-                                        <ul>
-                                            <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
-                                            <li><i>Kc Santosh, University of South Dakota</i></li>
-                                            <li><i>James Joshi, NSF</i></li>
-                                            <li><i>Danda B. Rawat, Howard University</i></li>
-                                            <li><i>Cécile Paris, CSIRO</i></li>
-                                        </ul>
-
-
-
 
                                         <div style="height: 30px; clear: both;"></div>
 
