--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -4264,9 +4264,19 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             });
 
             // Show the first keynoteContent by default
-            const firstContent = document.getElementById('content1');
-            if (firstContent) {
-                firstContent.style.display = 'block';
+            const content1 = document.getElementById('content1');
+            if (content1) {
+                content1.style.display = 'block';
+                document.getElementById('1').classList.add('open');
+            }
+            const content4 = document.getElementById('content4');
+            if (content4) {
+                content4.style.display = 'block';
+                document.getElementById('1').classList.add('open');
+            }
+            const content8 = document.getElementById('content8');
+            if (content8) {
+                content8.style.display = 'block';
                 document.getElementById('1').classList.add('open');
             }
 
