fix tpc, remove tutorial chairs

--- a/tps2025/organizers/index.html
+++ b/tps2025/organizers/index.html
@@ -27,12 +27,6 @@ title: "blank"
             {% include navbar.html %}
             <!-- End Navbar -->
         </div>
-
-
-
-
-
-
         <div class="bg-color-light">
             <div class="news-v3 margin-bottom-30">
                 {% include banner.html %}
@@ -55,30 +49,6 @@ title: "blank"
                     <div class="col-md-9"><!-- outter container  -->
                         <div class="news-v3-in">
                             <div class="row">
-                                <!-- <div class="col-md-3">
-                                    <ul class="no-padding margin-left-10 organizers-type-list hidden-xs"
-                                        id="sidebar-nav">
-                                        
-
-                                        <li class=""><a href="#General">Executive Chairs of the Co-located
-                                                Conferences</a>
-                                        </li>
-                                        <li class=""><a href="#Vice">General Co-Chairs</a></li>
-                                        <li class=""><a href="#Program">Program Co-Chairs</a></li>
-                                        <li class=""><a href="#ShortPaperProgram">Blue-Sky/ Vision Track
-                                                Co-Chairs</a>
-                                        </li>
-                                        <li class=""><a href="#BestPaper">Industry/Government Co-Chairs</a></li>
-                                        <li class=""><a href="#TestofTimeAward">Tutorial Co-Chairs</a></li>
-                                        <li class=""><a href="#Industry">Sponsorship Co-Chairs</a></li>
-                                        <li class=""><a href="#SummerSchool">Workshop Co-Chairs</a></li>
-                                        <li class=""><a href="#Publicity">Finance and Local Arrangements Chairs</a>
-                                        </li>
-                                        <li class=""><a href="#DoctoralConsortium">Proceedings Chairs</a></li>
-                                        <li class=""><a href="#Workshop">Publicity Chairs</a></li>
-                                        <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li>
-                                    </ul>
-                                </div> -->
                                 <div class="col-md-12">
                                     <div id="organizers">
 
@@ -224,23 +194,17 @@ title: "blank"
                                         </ul>
 
 
-                                        <h4 id="TestofTimeAward">Tutorial Co-Chairs</h4>
+                                        <!-- <h4 id="TestofTimeAward">Tutorial Co-Chairs</h4>
                                         <ul>
                                             <li class="person-card">
                                                 <div>TBD
-                                                    <!-- <a target="_blank" href="http://wp.comminfo.rutgers.edu/belkin/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Nicholas_J_Belkin.jpg">Nicholas J. Belkin</a>
-                                            Rutgers University, U.S.A. -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
                                                 <div>TBD
-                                                    <!-- <a href="https://www.uni-regensburg.de/sprache-literatur-kultur/informationswissenschaft/mitarbeiter/udo-kruschwitz/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Udo_Kruschwitz.jpg">Udo Kruschwitz</a>
-                                                Universität Regensburg, Germany -->
                                                 </div>
                                             </li>
-                                        </ul>
+                                        </ul> -->
 
                                         <h4 id="Industry">Sponsorship Co-Chairs</h4>
                                         <ul>
