--- a/CogMI2025/pcs/index.html
+++ b/CogMI2025/pcs/index.html
@@ -52,131 +52,33 @@ title: "blank"
                             <div class="row">
                                 <div class="col-md-12">
                                     <div id="organizers">
-
-                                        
-                                        <h4 id="CogMIGovernment/IndustryTrack">CogMI Government/Industry Track</h4>
-                                        <h5>Program Chairs</h5>
+                                        <h4 id="CogMITPC">2025 IEEE CogMI Techinical Program Committee</h4>
+                                        <h5>PC Co-Chairs</h5>
                                         <ul>
-                                            <li><i>James Joshi, NSF</i></li>
-                                            <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
-                                            <li><i>Kc Santosh, University of South Dakota</i></li>
-                                            <li><i>Cécile Paris, CSIRO</i></li>
-                                            <li><i>Danda B. Rawat, Howard University</i></li>
+                                            <li><i>Paolo Boldi, Università degli Studi di Milano</i></li>
+                                            <li><i>Reza Zafarani, Syracuse University</i></li>
+                                            <li><i>Mei-Ling Shyu, University of Missouri-Kansas City</i></li>
                                         </ul>
                                         <h5>PC Members</h5>
                                         <ul>
                                             <li><i>Jiajie He, University of Maryland, Baltimore County</i></li>
-                                            <li><i>Shreya Khurana, Godaddy</i></li>
+                                            <li><i>Longwei Wang, University of South Dakota</i></li>
+                                            <li><i>Raha Moraffah, Worcester Polytechnic Institute</i></li>
+                                            <li><i>Ashok Kumar, University of Louisiana at Lafayette</i></li>
+                                            <li><i>Jialie Shen, City St George's, University of London UK</i></li>
+                                            <li><i>Kun-Ta Chuang, National Cheng Kung University</i></li>
                                             <li><i>Sagar Sharma, TikTok</i></li>
                                             <li><i>Yuechun Gu, Marquette University</i></li>
-                                        </ul>
-
-                                        <h4 id="CogMIVision">CogMI-Vision</h4>
-                                        <h5>Program Chairs</h5>
-                                        <ul>
-                                            <li><i>Wenqi Wei, Fordham University</i></li>
-                                            <li><i>Calton Pu, Georgia Institute of Technology</i></li>
-                                            <li><i>James Joshi, NSF</i></li>
-                                            <li><i>Bhavani Thuraisingham</i></li>
-                                            <li><i>Christin Seifert</i></li>
-                                        </ul>
-
-                                        <h4 id="IEEECogMI2024Round1">IEEE CogMI 2024 Round 1</h4>
-                                        <h5>Program Chairs</h5>
-                                        <ul>
-                                            <li><i>Kc Santosh, University of South Dakota</i></li>
-                                            <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
-                                            <li><i>James Joshi, NSF</i></li>
-                                            <li><i>Peilin He, University of Pittsburgh</i></li>
-                                            <li><i>Cécile Paris, CSIRO</i></li>
-                                        </ul>
-                                        <h5>PC Members</h5>
-                                        <ul>
-                                            <li><i>Ravindra Hegadi, Central University of Karnataka</i></li>
-                                            <li><i>Sagar Sharma, TikTok</i></li>
-                                            <li><i>Yilin Yan, University of Miami</i></li>
-                                            <li><i>Xiao Wu, Southwest Jiaotong University</i></li>
-                                            <li><i>Raha Moraffah, Worcester Polytechnic Institute</i></li>
-                                            <li><i>Wenbo Wang, GoDaddy Inc.</i></li>
-                                            <li><i>Ramazan Aygun, Kennesaw State University</i></li>
-                                            <li><i>Jörg Schlötterer, University of Marburg, University of Mannheim</i>
-                                            </li>
-                                            <li><i>Camille Kurtz, Université de Paris</i></li>
-                                            <li><i>Dominick Rizk, The Catholic University of America</i></li>
-                                            <li><i>Taghi Khoshgoftaar, Florida Atlantic University</i></li>
-                                            <li><i>Shu-Ching Chen, University of Missouri-Kansas City, Data Science and
-                                                    Analytics Innovation Center (dSAIC)</i></li>
-                                            <li><i>Yudong Tao, University of Miami</i></li>
-                                            <li><i>Longwei Wang, University of South Dakota</i></li>
-                                            <li><i>Xinyi Zhou, University of Washington</i></li>
-                                            <li><i>Oluwarotimi Samuel, University of Derby</i></li>
-                                            <li><i>Ritwik Banerjee, Stony Brook University</i></li>
-                                            <li><i>Hubert Cecotti, Fresno State</i></li>
                                             <li><i>Hajar Homayouni, San Diego State University</i></li>
-                                            <li><i>Raymond Ghandour, College of Engineering and Technology, American
-                                                    University of The Middle East, Egaila</i></li>
-                                            <li><i>Rodrigue Rizk, University of South Dakota</i></li>
-                                            <li><i>Abdou Youssef, George Washington University</i></li>
-                                            <li><i>Patrick Cooper, CSIRO</i></li>
-                                            <li><i>Jialie Shen, City, University of London UK</i></li>
-                                            <li><i>Riccardo Guidotti, University of Pisa</i></li>
-                                            <li><i>Kun-Ta Chuang, National Cheng Kung University</i></li>
-                                            <li><i>Andrew Reeson, CSIRO</i></li>
-                                            <li><i>Aaisha Makkar, University of Derby</i></li>
+                                            <li><i>Girijesh Prasad, University of Ulster</i></li>
+                                            <li><i>Yudong Tao, University of Miami</i></li>
                                             <li><i>Anas El-Kalam, CADI AYYAD UNIVERSITY ENSA OF MARRAKESH</i></li>
-                                            <li><i>Laurent Wendling</i></li>
-                                            <li><i>Ashok Kumar, University of Louisiana at Lafayette</i></li>
-                                            <li><i>Girijesh Prasad, University of Ulster</i></li>
-                                        </ul>
-
-                                        <h4 id="IEEECogMI2024Round2">IEEE CogMI 2024 Round 2</h4>
-                                        <h5>Program Chairs</h5>
-                                        <ul>
-                                            <li><i>Keke Chen, University of Maryland at Baltimore County</i></li>
-                                            <li><i>Kc Santosh, University of South Dakota</i></li>
-                                            <li><i>James Joshi, NSF</i></li>
-                                            <li><i>Danda B. Rawat, Howard University</i></li>
-                                            <li><i>Cécile Paris, CSIRO</i></li>
-                                        </ul>
-                                        <h5>PC Members</h5>
-                                        <ul>
-                                            <li><i>Jörg Schlötterer, University of Marburg, University of Mannheim</i>
-                                            </li>
-                                            <li><i>Rodrigue Rizk, University of South Dakota</i></li>
-                                            <li><i>Ravindra Hegadi, Central University of Karnataka</i></li>
-                                            <li><i>Yudong Tao, University of Miami</i></li>
-                                            <li><i>Shreya Khurana, Godaddy</i></li>
-                                            <li><i>Sagar Sharma, TikTok</i></li>
-                                            <li><i>Yuechun Gu, Marquette University</i></li>
-                                            <li><i>Taghi Khoshgoftaar, Florida Atlantic University</i></li>
-                                            <li><i>Xiao Wu, Southwest Jiaotong University</i></li>
-                                            <li><i>Yilin Yan, University of Miami</i></li>
-                                            <li><i>Jialie Shen, City, University of London UK</i></li>
-                                            <li><i>Raha Moraffah, Worcester Polytechnic Institute</i></li>
-                                            <li><i>Dominick Rizk, The Catholic University of America</i></li>
-                                            <li><i>Girijesh Prasad, University of Ulster</i></li>
-                                            <li><i>Ashok Kumar, University of Louisiana at Lafayette</i></li>
-                                            <li><i>Hajar Homayouni, San Diego State University</i></li>
-                                            <li><i>Longwei Wang, University of South Dakota</i></li>
-                                            <li><i>Kun-Ta Chuang, National Cheng Kung University</i></li>
-                                            <li><i>Ritwik Banerjee, Stony Brook University</i></li>
-                                            <li><i>Wenbo Wang, GoDaddy Inc.</i></li>
-                                            <li><i>Abdou Youssef, The George Washington University</i></li>
-                                            <li><i>Xinyi Zhou, University of Washington</i></li>
-                                            <li><i>Riccardo Guidotti, University of Pisa</i></li>
-                                            <li><i>Patrick Cooper, CSIRO</i></li>
-                                            <li><i>Raymond Ghandour, College of Engineering and Technology, American
-                                                    University of The Middle East, Egaila</i></li>
-                                            <li><i>Ramazan Aygun, Kennesaw State University</i></li>
-                                            <li><i>Shu-Ching Chen, University of Missouri-Kansas City, Data Science and
-                                                    Analytics Innovation Center (dSAIC)</i></li>
+                                            <li><i>Oluwarotimi Samuel, University of Derby</i></li>
                                             <li><i>Camille Kurtz, Université de Paris</i></li>
-                                            <li><i>Laurent Wendling, LIPADE</i></li>
-                                            <li><i>Andrew Reeson, CSIRO</i></li>
-                                            <li><i>Hubert Cecotti</i></li>
-                                            <li><i>Oluwarotimi Samuel</i></li>
-                                            <li><i>Aaisha Makkar</i></li>
-                                            <li><i>Anas El-Kalam</i></li>
+                                            <li><i>Ramazan Aygun, Kennesaw State University</i></li>
+                                            <li><i>Abdou Youssef, The George Washington University</i></li>
+                                            <li><i>Taghi Khoshgoftaar, Florida Atlantic University</i></li>
+                                            <li><i>Raymond Ghandour, College of Engineering and Technology, American University of The Middle East, Egaila</i></li>
                                         </ul>
 
                                         <div style="height: 30px; clear: both;"></div>
