remove tutorial chairs

--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -173,23 +173,17 @@ title: "blank"
                                         </ul>
 
 
-                                        <h4 id="TestofTimeAward">Tutorial Co-Chairs</h4>
+                                        <!-- <h4 id="TestofTimeAward">Tutorial Co-Chairs</h4>
                                         <ul>
                                             <li class="person-card">
                                                 <div>TBD
-                                                    <!-- <a target="_blank" href="http://wp.comminfo.rutgers.edu/belkin/">
-                                            <img src="{{ site.baseurl }}/assets/img/organizers/Nicholas_J_Belkin.jpg">Nicholas J. Belkin</a>
-                                        Rutgers University, U.S.A. -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
                                                 <div>TBD
-                                                    <!-- <a href="https://www.uni-regensburg.de/sprache-literatur-kultur/informationswissenschaft/mitarbeiter/udo-kruschwitz/">
-                                            <img src="{{ site.baseurl }}/assets/img/organizers/Udo_Kruschwitz.jpg">Udo Kruschwitz</a>
-                                            Universität Regensburg, Germany -->
                                                 </div>
                                             </li>
-                                        </ul>
+                                        </ul> -->
 
                                         <h4 id="Industry">Sponsorship Co-Chairs</h4>
                                         <ul>
