--- a/tps2025/pcs/index.html
+++ b/tps2025/pcs/index.html
@@ -67,7 +67,7 @@ title: "blank"
                                 <div class="col-md-12">
                                     <div id="organizers">
                                 
-                                        <h4 id="TPS2025ProgramCommittee">2025 TPS Program Committee</h4>
+                                        <h4 id="TPS2025ProgramCommittee">2025 IEEE TPS Technical Program Committee</h4>
                                 
                                         <h5>PC Co-Chairs</h5>
                                         <ul>
