--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -49,7 +49,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             <!-- <h1 class="animated fadeInUp">Virtual Conference</h1> -->
             <p class="animated fadeInRight" id="sub_title">The 7<sup>th</sup> IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications
             </p>
-            <p class="animated fadeInLeft">TBD, Pittsburgh, USA</p>
+            <p class="animated fadeInLeft">Pittsburgh, PA, USA</p>
             <p class="animated fadeInLeft">
                 Co-located with <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">IEEE CIC 2025</a> and <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cogmi/2025/" target="_blank">IEEE CogMI 2025</a>
             </p>
