--- a/tps2025/organizers/index.html
+++ b/tps2025/organizers/index.html
@@ -159,39 +159,16 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a target="_blank" href="http://www.bigdatalab.ac.cn/~gjf/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Jiafeng_Guo.jpg">Jiafeng Guo</a>
-                                            Chinese Academy of Sciences, China -->
-                                                </div>
-                                            </li>
-
-                                            <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a href="https://iew3.technion.ac.il/~kurland/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Oren_Kurland.jpg">Oren Kurland</a>
-                                            Israel Institute of Technology, Israel -->
+                                                <div>
+                                                    <a target="_blank" href="https://experts.swinburne.edu.au/2784-dimitrios-georgakopoulos">
+                                                        <img
+                                                            src="{{ site.baseurl }}/assets/img/organizers/dimitiours.webp">Dimitrios Georgakopoulos</a>
+                                                    <span class="affiliation">Swinburne Univ. of Technology,
+                                                        Australia</span>
                                                 </div>
                                             </li>
                                         </ul>
 
-                                        <h4 id="BestPaper">Industry/Government Co-Chairs</h4>
-                                        <ul>
-                                            <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a target="_blank" href="http://www.is.informatik.uni-duisburg.de/staff/fuhr.html">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Norbert_Fuhr.jpg">Norbert Fuhr</a>
-                                            University of Duisburg-Essen, Germany -->
-                                                </div>
-                                            </li>
-                                            <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a href="http://www.rosiejonesphd.com/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/rosie.jpg"/>Rosie Jones</a>
-                                                Spotify, U.S.A. -->
-                                                </div>
-                                            </li>
-                                        </ul>
 
 
                                         <!-- <h4 id="TestofTimeAward">Tutorial Co-Chairs</h4>
@@ -218,14 +195,14 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.linkedin.com/in/luo-si-00a5a54/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Luo_Si.jpg">Luo Si</a>
                                             Alibaba Group Inc. -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a target="_blank" href="http://infosense.cs.georgetown.edu/grace/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Grace_Hui_Yang.jpg">Grace Hui Yang</a>
                                             Georgetown University, U.S.A -->
@@ -247,14 +224,14 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="http://www.bigdatalab.ac.cn/~lanyanyan/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Yanyan_Lan.jpg">Yanyan Lan</a>
                                             Chinese Academy of Sciences, China -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.hangli-hl.com/index.html">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Hang_Li.jpg">Hang Li</a>
                                             ByteDance AI Lab, China -->
@@ -301,14 +278,14 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.barbara.cl/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Barbara_Poblete.jpg">Barbara Poblete</a>
                                             University of Chile, Chile -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a target="_blank" href="http://qub.ac.uk/schools/eeecs/Connect/Staff/BusinessCard/?name=j.shen">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Jerry_Shen.jpg">Jerry Shen</a>
                                             Queen's University Belfast, U.K. -->
@@ -329,7 +306,7 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.cse.msu.edu/~tangjili/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Jiliang_Tang.jpg">Jiliang Tang</a>
                                             Michigan State University, U.S.A. -->
