fix: dimitrous png , banner height

--- a/tps2025/organizers/index.html
+++ b/tps2025/organizers/index.html
@@ -162,7 +162,7 @@ title: "blank"
                                                 <div>
                                                     <a target="_blank" href="https://experts.swinburne.edu.au/2784-dimitrios-georgakopoulos">
                                                         <img
-                                                            src="{{ site.baseurl }}/assets/img/organizers/dimitiours.webp">Dimitrios Georgakopoulos</a>
+                                                            src="{{ site.baseurl }}/assets/img/organizers/dimitrios.png">Dimitrios Georgakopoulos</a>
                                                     <span class="affiliation">Swinburne Univ. of Technology,
                                                         Australia</span>
                                                 </div>
