add: travel sponsor, fix: wording, add organizers

--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -143,13 +143,13 @@ title: "blank"
                                                     <span class="affiliation">Arizona State University, U.S.A.</span>
                                                 </div>
                                             </li>
-                                            
-
                                             <li class="person-card">
                                                 <div>
-                                                    <!-- <a href="https://iew3.technion.ac.il/~kurland/">
-                                            <img src="{{ site.baseurl }}/assets/img/organizers/Oren_Kurland.jpg">Oren Kurland</a>
-                                        Israel Institute of Technology, Israel -->
+                                                    <a target="_blank" href="https://experts.swinburne.edu.au/2784-dimitrios-georgakopoulos">
+                                                        <img
+                                                            src="{{ site.baseurl }}/assets/img/organizers/dimitrios.png">Dimitrios Georgakopoulos</a>
+                                                    <span class="affiliation">Swinburne Univ. of Technology,
+                                                        Australia</span>
                                                 </div>
                                             </li>
                                         </ul>
