add sponsor, travel, add organizer, fix wording

--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -50,7 +50,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             <p class="animated fadeInRight" id="sub_title">The 11<sup>th</sup> IEEE International Conference on
                 Collaboration and Internet Computing
             </p>
-            <p class="animated fadeInLeft">TBD, Pittsburgh, USA</p>
+            <p class="animated fadeInLeft">Nov. 11-14, 2025, Pittsburgh, PA, USA</p>
             <p class="animated fadeInLeft">
                 Co-located with <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/tps/2025/" target="_blank">IEEE TPS 2025</a> and <a style="color: rgb(219, 190, 26);" href="https://www.sis.pitt.edu/lersais/conference/cogmi/2025/" target="_blank">IEEE CogMI 2025</a>
             </p>
