--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -134,18 +134,12 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a target="_blank" href="http://www.bigdatalab.ac.cn/~gjf/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Jiafeng_Guo.jpg">Jiafeng Guo</a>
-                                            Chinese Academy of Sciences, China -->
-                                                </div>
-                                            </li>
-
-                                            <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a href="https://iew3.technion.ac.il/~kurland/">
-                                                <img src="{{ site.baseurl }}/assets/img/organizers/Oren_Kurland.jpg">Oren Kurland</a>
-                                            Israel Institute of Technology, Israel -->
+                                                <div>
+                                                    <a target="_blank" href="https://experts.swinburne.edu.au/2784-dimitrios-georgakopoulos">
+                                                        <img
+                                                            src="{{ site.baseurl }}/assets/img/organizers/dimitrios.png">Dimitrios Georgakopoulos</a>
+                                                    <span class="affiliation">Swinburne Univ. of Technology,
+                                                        Australia</span>
                                                 </div>
                                             </li>
                                         </ul>
