--- a/CogMI2025/travel/index.html
+++ b/CogMI2025/travel/index.html
@@ -12,7 +12,7 @@ title: "Travel"
 <html lang="en"> <!--<![endif]-->
 
 <head>
-    <title>IEEE TPS 2025 - Travel</title>
+    <title>IEEE CogMI 2025 - Travel</title>
     {% include head.html %}
 </head>
 
