--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -18,8 +18,8 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- v ieee cookie banner v -->
-    <script src="" https://cmp.osano.com/AzyzptTmRlqVd2LRf/530d6a63-68a0-4f3a-9a73-e768af4c1ca4/osano.js""></script>
-    <link rel="" stylesheet"" href="" https://cookie-consent.ieee.org/ieee-cookie-banner.css"" type="" text/css"" />
+    <script src=" https://cmp.osano.com/AzyzptTmRlqVd2LRf/530d6a63-68a0-4f3a-9a73-e768af4c1ca4/osano.js"></script>
+    <link rel="stylesheet" href=" https://cookie-consent.ieee.org/ieee-cookie-banner.css" type="text/css" />
     <!-- ^ ieee cookie banner ^ -->
 </head>
 
