important: fix conference info

--- a/CogMI2025/index.html
+++ b/CogMI2025/index.html
@@ -84,19 +84,41 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                     </div>
                     <!--intro-->
                     <div class="save_the_date margin-bottom-50" id="save_the_date">
-                        <span>About IEEE TPS</span>
+                        <span>About IEEE CogMI</span>
                         <p>
-                            Recent advances in computing and information technologies such as IoT, mobile Edge/Cloud computing, cyber- physical-social systems, 
-                            Artificial Intelligence/Machine Learning/ Deep Learning, etc., have paved way for creating next generation smart and intelligent systems 
-                            and applications that can have transformative impact in our society while accelerating rapid scientific discoveries and innovations. 
-                            Such newer technologies and paradigms are getting increasingly embedded in the computing platforms and networked information systems/infrastructures 
-                            that form the digital foundation for our personal, organizational and social processes and activities. It is increasingly becoming critical that the trust, 
-                            privacy and security issues in such digital environments are holistically addressed to ensure the safety and well-being of individuals as well as our society.
+                            Artificial Intelligence (AI) is rapidly transforming our business, social and physical
+                            world. Machine Intelligence and computing artifacts infused with AI and cognition
+                            is increasingly becoming an integral part of our social and economic activities/processes,
+                            as well as cultural and business interactions.
+                            The cognitive machine intelligence (CogMI) is creating unprecedented opportunities for
+                            impactful scientific innovations and societal transformations by significantly
+                            augmenting the human ability for problem solving and rapid decision making in terms of
+                            speed, precision and variety, while fostering innovations in all our human endeavors
+                            from scientific discoveries, solving long standing healthcare problems, modeling highly
+                            interconnected and globally distributed systems, and so forth.
+                            As we enter the new social, physical and cyber world empowered by such cognitive machine
+                            intelligence, it is important to understand and explore the foundational characteristics
+                            of the algorithmic theory and processes behind the cognitive machine intelligence, the
+                            behavioral and cognitive enhancement of intelligent machines that promote a productive and
+                            creative partnership and collaboration between the humans and the machines so as to ensure
+                            an equitable, fair and transparent CogMI-enhanced society and cyber-physical-social worlds
+                            around us.
                         </p>
-                        <p>
-                            IEEE TPS-ISA is an international multidisciplinary forum for presentation of state-of-the art innovations, and discussion among academic, industrial researchers, 
-                            and practitioners on issues related to trust, privacy and security in emerging smart and intelligent systems and applications.  (For more Information, move to <a
-                                href="calls.html">CFP</a>)
+                        <p>The goal of the IEEE Conference on Cognitive Machine Intelligence (IEEE CogMI) is to create a
+                            research and development forum on cognitive machine intelligence to foster research results
+                            on AI and ML
+                            with cognitive science and behavioral science. It promotes productive collaborations among
+                            experts from multiple disciplines, such as but not limited to: computer science, electronic
+                            and computer engineering,
+                            information science, economics, industrial engineering, psychology, social and behavioral
+                            sciences, biological and physical sciences, and ethics, law and policy.
+                            IEEE CogMI aims to be a premier, highly multidisciplinary forum to foster interaction and
+                            exchange of innovative ideas, and collaboration among researchers, practitioners,
+                            philosophers from academia, industry
+                            and government sectors who are interested in developing innovative AI/ML algorithms,
+                            applications and systems by integrating cognitive science and putting humans in the loop,
+                            promoting innovations in cognitive machine intelligence.
+                            (For more Information, move to <a href="calls.html">CFP</a>)
                         </p>
                     </div>
 
